🔧 Fix z-index loader

--- a/components/Flex/Flex.module.sass
+++ b/components/Flex/Flex.module.sass
@@ -1,4 +1,5 @@
 .Flex
+  z-index: 50
   width: 100vw
   min-height: var(--viewport-height, 100vh)
   position: fixed
